# pipeit

./: .gitignore  README.md  setup.cfg
samples/project01/src/: elements.py  group.py  show.py
samples/project01/tests/: clear_cache.sh  test01.result.txt  test01.sh
samples/project01/units/: .pipeit.cfg  elements  group  show
src/: pipeit.py  pipeit_core.py  setup.py
src/pipeit/: __init__.py  pipeit.py  pipeit_core.py
tests/: pipeit_test.py
