[metadata]
name = pipeit
version = 0.1.0
description = Pipeit - pipe program units.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
url = https://github.com/masaharu-kato/pipeit
author = Masaharu Kato
author_email = saa01068@gmail.com

[options]
install_requires =
    toml
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest

# [options.entry_points]
# console_scripts =
#     foo = package_name.module_name:func_name
#     foo_dev = package_name.module_name:func_name [develop]
# gui_scripts =
#     bar = gui_package_name.gui_module_name:gui_func_name
